# rust-rsocket-cli

./: Cargo.toml  Makefile  README.md  build.rs
proto/: reflection.proto
release/rsocket-cli/DEBIAN/: control
src/: main.rs
