[package]
name = "rsocket-cli"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-stream = "0.3.6"
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["derive"] }
prost = "0.13.4"
prost-reflect = { version = "0.14.4", features = ["serde"] }
rsocket_rust = "0.7.5"
rsocket_rust_transport_websocket = "0.7.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = "1.42.0"

[build-dependencies]
prost-build = "0.13.4"
